# bizztune

./: .env  .gitignore  README.md  pyproject.toml
archive/: eval.py  tune.py
archive/instruction/: instruction.py
bizztune/: benchmark.py  config.py  data.py  instruction.py  main.py  model.py  utils.py
bizztune/baseset/: __init__.py  baseset.py  dataset_prompt.py  examples.py  utils.py
bizztune/benchmark/: benchmark.py  prompt.py  utils.py
bizztune/config/: config.py
bizztune/dataset/: baseset.py  dataset.py  examples.py  instruction_prompt.py  instructionset.py  prompt.py  utils.py
bizztune/instructionset/: __init__.py  instructionset.py  utils.py
bizztune/tune/: eval.py  run_qlora.sh  tune.py  tuner.py
bizztune/tune/results/qlora_model/: adapter_config.json  tokenizer_config.json
data/: accuracies  benchmark.json  hf_instruction_dataset.jsonl  instruction_dataset.jsonl  original_dataset  results  results.json  test_results
model/ChrisTho/bizztune_mistral_7b_instruct/: README.md  adapter_config.json
src/: config.py
