[tool.poetry]
name = "bizztune"
version = "0.1.0"
description = ""
authors = ["ChrisTho23 <christophe.thomassin23@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
