[tool.poetry]
name = "bizztune"
version = "0.1.0"
description = ""
authors = ["ChrisTho23 <christophe.thomassin23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.1"
langfuse = "^2.33.1"
openai = "^1.30.5"
python-dotenv = "^1.0.1"
transformers = "^4.41.2"
mistralai = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create_dataset = "bizztune.data:main"
benchmark = "bizztune.benchmark:main"
